manual grid initial set up

--- a/grid/index.html
+++ b/grid/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Out with the old... | HTML5 Semantics KM</title>
+<title>Grid Exercise</title>
 <link rel="stylesheet" href="path-to-style.css">
-<meta name="description" content="We are going to refine this document down to a good starting point for all html5 projects moving forward." />
+<meta name="description" content="Manual grid set up." />
 <meta name="author" content="Kristena Merritt" />
 <link rel="shortcut icon" href="/favicon.ico" />
-<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-<main>
+<main class="cf">
   <header class="primary">
     <h1>Out with the old...</h1>
-    <h2>Beginning the transistion to HTML5</h2>
+    <h2>Beginning the transition to HTML5</h2>
     <nav class="primary">
       <ul>
         <li><a href="#">LINK</a></li>
