working through css grid

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li><a href="pre-assessment/index.html">Pre-Assessment</a></li>
           <li><a href="html5-semantics/index.html">Refactored HTML</a></li>
           <li><a href="grid/index.html">Grid Demo</a></li>
+          <li><a href="css-grid-exercise-1/index.html">CSS Grid Exercise 1</a></li>
         </ul>
       </nav>
     </header>
