--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>IFSC 3342 | Kristena Merritt</title>
     <meta name="description" content="My IFSC 3342 Mobile Web Design work.">
     <meta name="author" content="Kristena Merritt">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="assets/css/style.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300|Work+Sans:700,800" rel="stylesheet">
   </head>
