--- a/css-grid-exercise-1/index.html
+++ b/css-grid-exercise-1/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<title>Grid Exercise</title>
-<link rel="stylesheet" href="path-to-style.css">
-<meta name="description" content="Manual grid set up." />
-<meta name="author" content="Kristena Merritt" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="stylesheet" href="assets/css/style.css" />
+  <meta charset="utf-8" />
+  <title>Grid Exercise</title>
+  <link rel="stylesheet" href="path-to-style.css">
+  <meta name="description" content="Manual grid set up." />
+  <meta name="author" content="Kristena Merritt" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 <main>
