Set up resume structure

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <li><a href="html5-semantics/index.html">Refactored HTML</a></li>
           <li><a href="grid/index.html">Grid Demo</a></li>
           <li><a href="css-grid-exercise-1/index.html">CSS Grid Exercise 1</a></li>
+          <li><a href="resume/index.html">Resume</a></li>
         </ul>
       </nav>
     </header>
