--- a/resume/index.html
+++ b/resume/index.html
@@ -1,4 +1,29 @@
-<header class="container" id="top">
+<!doctype html>
+<html class="no-js" lang="">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title></title>
+  <link rel="stylesheet" href="css/style.css">
+  <meta name="description" content="">
+
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+  <meta property="og:image:alt" content="">
+
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" href="/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="icon.png">
+
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="theme-color" content="#fafafa">
+</head>
+
+<body>
+  <header class="container" id="top">
     <!-- Main navigation -->
     <nav class="primary">
     <ul>  
@@ -15,11 +40,11 @@
     <section id="about">
       <h2>Personal Details</h2>
       <div class="bio">
-      <img itemprop="image" src="https://placehold.co/600x600?text=Headshot" alt="Kristena Merritt">
-      <p itemprop="description">Hello, I'm a tech-savvy wordsmith with a knack for turning complex jargon into captivating web content. I am an empathic person with an eye for design and color. I enjoy web development and my goal is to become a mobile-first content-first team member of a web team. Currently my web team is just me and I help manage the uaex.uada.edu website, train web editors, and try to make new and engaging content.</p>
+      <img itemprop="image" src="assets/img/profile-pic.jpg" alt="Kristena Merritt">
+      <p itemprop="description">Hello, I'm an empathetic web writer with a knack for turning complex jargon into captivating web content. I'm proficient in HTML/CSS, digital accessibility, and various CMS tools. My goal is to join a web development team where I can contribute my content expertise and continue to improve my development skills. </p>
       </div>  
       <dl class="details">
-        <dt>Kristena Merritt</dt>
+        <dt>Name</dt>
         <dd itemprop="name">
           <span itemprop="givenName">Kristena</span> <span itemprop="familyName">Merritt</span>
         </dd>
@@ -31,11 +56,11 @@
         <dd itemprop="homeLocation">Arkansas</dd>
         <dt>Telephone</dt>
         <dd>
-          <a itemprop="telephone" href="tel:555.555.5555">501.508.9794</a>
+          <a itemprop="telephone" href="tel:501.508.9794">501.508.9794</a>
         </dd>
         <dt>Email</dt>
         <dd>
-          <a itemprop="email" href="mailto:email@mail.com">merrittkristena@gmail.com</a>
+          <a itemprop="email" href="mailto:merrittkristena@gmail.com">merrittkristena@gmail.com</a>
         </dd>
         <dt>Address</dt>
   
@@ -48,15 +73,15 @@
   
       </dl>
       <ul class="related-links">
-        <li><a itemprop="url" rel="me" href="https://github.com/profile"> github</a></li>
-        <li><a itemprop="url" rel="me" href="https://www.linkedin.com/in/kristena-merritt/">linkedin</a></li>
-        <li><a itemprop="url" href="resume.pdf" download>pdf resume</a></li>
+        <li><a itemprop="url" rel="me" href="https://github.com/klmerritt44">GitHub</a></li>
+        <li><a itemprop="url" rel="me" href="https://www.linkedin.com/in/kristena-merritt/">Linkedin</a></li>
+        <li><a itemprop="url" href="assets/doc/km-resume-web-content-specialist.pdf" download>PDF Resume</a></li>
       </ul>
     </section>
     <section id="skills">
       <h2>Skills</h2>
       <ul>
-        <li class="skill">CMS tools: Omni CMS, SquareSpace, Google Sites, WIX - advanced</li>
+        <li class="skill">CMS Tools: Omni C, SquareSpace, Google Sites, WIX - advanced</li>
         <li class="skill">HTML - intermediate</li>
         <li class="skill">CSS - basic</li>
         <li class="skill">Google Analytics 4 and Google Data Studio</li>
@@ -70,10 +95,10 @@
         <h3 itemprop="jobTitle">Digital Media Technical Writer</h3>
         <div itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
           <span itemprop="name">University of Arkansas System Division of Agriculture Cooperative Extension Service</span>
-          <span>February 2010 - Present</span>
-          <p itemprop="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit...</p>
+          <span>July 2019 - Present</span>
+          <p itemprop="description">I serve as the main website editor, manager, content curator for our website uaex.uada.edu. Additionally, I fulfill administrative duties and oversee the training of employees in utilizing our content management system for efficient content editing.</p>
           <span itemprop="location" itemscope itemtype="http://schema.org/Place">
-            <a itemprop="url" href="http://link-to-company.com">Company URL</a>
+            <a itemprop="url" href="https://www.uaex.uada.edu/">Cooperative Extension Website</a>
             <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
             <span itemprop="addressLocality">Little Rock, AR</span>
           </span>
@@ -115,16 +140,21 @@
     <section id="education">
       <h2>Education</h2>
       <article class="certificate" itemprop="alumniOf" itemscope itemtype="http://schema.org/EducationalOrganization">
-        <h3 itemprop="description"><abbr title="Master of Science">BA</abbr> Web Design and Development</h3>
-        <span itemprop="name">University name 1</span>
-        <span itemprop="location" itemscope>Anywhere, USA</span>
-        <span>2005-2007</span>
+        <h3 itemprop="description"><abbr title="Master of Arts">MA</abbr>Professional and Technical Writing</h3>
+        <span itemprop="name">University of Arkansas at Little Rock</span>
+        <span itemprop="location" itemscope>Little Rock, AR</span>
+        <span>Summer 2017-Fall 2018</span>
       </article>
     </section>
   </main>
   <!-- Footer -->
   <footer>
     <div id="copyright">
-      &copy; 2024 Name | <a href="#top">Top</a>
+      &copy; 2024 Kristena Merritt | <a href="#top">Top</a>
     </div>
   </footer>
+  <script src="js/app.js"></script>
+
+</body>
+
+</html>
