mobile view rough draft

--- a/resume/index.html
+++ b/resume/index.html
@@ -74,7 +74,6 @@
           <span itemprop="postalCode">72202</span>
           <span itemprop="addressCountry">USA</span>
         </dd>
-  
       </dl>
       <ul class="related-links">
         <li><a itemprop="url" rel="me" href="https://github.com/klmerritt44">GitHub</a></li>
@@ -151,30 +150,31 @@
       <section id="courses">
         <h3>Web-Related Coursework</h3>
         <article itemscope itemtype="https://schema.org/Course">
-          <div itemprop="name">Mobile Web Design</div>
-          <div itemprop="description">Explored modern web methodologies and streamlined my mobile-first approach to web development.</div>
+          <h4 itemprop="name">Mobile Web Design | Spring 2024</h4>
+          <div itemprop="description">I delved into modern web development tools such as HTML, CSS, and JavaScript, getting practice crafting websites using a mobile-first approach.</div>
           <div itemscope itemtype="http://schema.org/EducationalOrganization">
           <div itemprop="name">University of Arkansas at Little Rock</div>
           </div>
         </article>
         <article itemscope itemtype="https://schema.org/Course">
-          <div itemprop="name">Web Technologies</div>
-          <div itemprop="description">Explored modern web methodologies and streamlined my mobile-first approach to web development.</div>
+          <h4 itemprop="name">Web Technologies | Fall 2023</h4>
+          <div itemprop="description">I explored modern web methodologies and streamlined my mobile-first approach to web development.</div>
            <div itemscope itemtype="http://schema.org/EducationalOrganization">
           <div itemprop="name">University of Arkansas at Little Rock</div>
           </div>
         </article>
         <article itemscope itemtype="https://schema.org/Course">
-          <div itemprop="name">Usability Testing and Design</div>
-          <div itemprop="description">Explored modern web methodologies and streamlined my mobile-first approach to web development.</div>
+          <h4 itemprop="name">Writing for the Web | Fall 2017</h4>
+          <div itemprop="description">This course taught me how to draft concise and user-friendly web content to help users reach their goals.</div>
            <div itemscope itemtype="http://schema.org/EducationalOrganization">
           <div itemprop="name">University of Arkansas at Little Rock</div>
           </div>
-          <article itemscope itemtype="https://schema.org/Course">
-            <div itemprop="name">Writing for the Web</div>
-             <div itemscope itemtype="http://schema.org/EducationalOrganization">
-            <div itemprop="name">University of Arkansas at Little Rock</div>
-            </div>
+        <article itemscope itemtype="https://schema.org/Course">
+          <h4 itemprop="name">Usability Testing and Design | Spring 2017</h4>
+          <div itemprop="description">I learned how to conduct a full-scale usability test from start to finish working on the UALR library's website.</div>
+           <div itemscope itemtype="http://schema.org/EducationalOrganization">
+          <div itemprop="name">University of Arkansas at Little Rock</div>
+          </div>
         </article>
       </section>
     </section>
