--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li><a href="grid/index.html">Grid Demo</a></li>
           <li><a href="css-grid-exercise-1/index.html">CSS Grid Exercise 1</a></li>
           <li><a href="resume/index.html">Resume</a></li>
+          <li><a href="assets/img/flexbox-defense-complete.png">Flexbox Defense</a></li>
         </ul>
       </nav>
     </header>
