add grid template area and header styling

--- a/resume/index.html
+++ b/resume/index.html
@@ -36,8 +36,10 @@
   </header>
   <!-- Main -->
   <main itemscope itemtype="http://schema.org/Person" class="container">
-    <h1 class="page-title">Kristena Merritt</h1>
-    <h2 class="subtitle">Aspiring Web Developer</h2>
+    <div id="title">
+      <h1 class="page-title">Kristena Merritt</h1>
+      <h2 class="subtitle">Aspiring Web Developer</h2>
+    </div>
     <section id="about">
       <h2 class="visually-hidden">Personal Details</h2>
       <div class="bio">
@@ -98,7 +100,7 @@
         <div itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
           <span itemprop="name">University of Arkansas System Division of Agriculture Cooperative Extension Service</span>
           <span>July 2019 - Present</span>
-          <p itemprop="description">I serve as the main website editor, manager, content curator for our website uaex.uada.edu.</p>
+          <p itemprop="description">I serve as the main website editor, manager, content curator for the <a href="https://uaex.uada.edu">Cooperative Extension Service website</a>.</p>
           <p itemprop="description"><strong>My responsibilities include:</strong></p>
           <ul>
             <li>Crafting user-friendly and accessible web content from research-based information.</li>
@@ -186,6 +188,7 @@
     </div>
   </footer>
   <script src="js/app.js"></script>
+  <script src="https://kit.fontawesome.com/fc99a5d90b.js" crossorigin="anonymous"></script>
 
 </body>
 
