added course descriptions tablet design time container

--- a/resume/index.html
+++ b/resume/index.html
@@ -99,8 +99,8 @@
         <h3 itemprop="jobTitle">Digital Media Technical Writer | Web Content Specialist</h3>
         <div itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
           <span itemprop="name">University of Arkansas System Division of Agriculture Cooperative Extension Service</span>
-          <span>July 2019 - Present</span>
-          <p itemprop="description">I serve as the main website editor, manager, content curator for the <a href="https://uaex.uada.edu">Cooperative Extension Service website</a>.</p>
+          <span class="date">July 2019 - Present</span>
+          <p itemprop="description">I serve as the main website editor, manager, content curator for the <a href="https://uaex.uada.edu">Cooperative Extension Service website</a>. I help our specialists and county educators promote their services and reach Arkansans through our website.</p>
           <p itemprop="description"><strong>My responsibilities include:</strong></p>
           <ul>
             <li>Crafting user-friendly and accessible web content from research-based information.</li>
@@ -153,27 +153,28 @@
         <h3>Web-Related Coursework</h3>
         <article itemscope itemtype="https://schema.org/Course">
           <h4 itemprop="name">Mobile Web Design | Spring 2024</h4>
-          <div itemprop="description">I delved into modern web development tools such as HTML, CSS, and JavaScript, getting practice crafting websites using a mobile-first approach.</div>
+          <div itemprop="description">I immersed myself in the world of modern web development, adopting a mobile-first approach to creating websites. I gained a deeper understanding of web development best practices, file management, and site optimization. The hands-on nature of this course allowed me to put theory into practice, by developing my own mobile-first, microdata supported resume that you're seeing here. This experience helped prepare me for the dynamic challenges of web development.
+            </div>
           <div itemscope itemtype="http://schema.org/EducationalOrganization">
           <div itemprop="name">University of Arkansas at Little Rock</div>
           </div>
         </article>
         <article itemscope itemtype="https://schema.org/Course">
           <h4 itemprop="name">Web Technologies | Fall 2023</h4>
-          <div itemprop="description">I explored modern web methodologies and streamlined my mobile-first approach to web development.</div>
+          <div itemprop="description">This class allowed me to explore modern web development through a progressive enhancement lense. I learned the fundamentals of standards-based web development and gained hands-on experience in structuring content using semantic HTML, controlling style using CSS, and manipulating the DOM using JavaScript.</div>
            <div itemscope itemtype="http://schema.org/EducationalOrganization">
           <div itemprop="name">University of Arkansas at Little Rock</div>
           </div>
         </article>
         <article itemscope itemtype="https://schema.org/Course">
           <h4 itemprop="name">Writing for the Web | Fall 2017</h4>
-          <div itemprop="description">This course taught me how to draft concise and user-friendly web content to help users reach their goals.</div>
+          <div itemprop="description">As a content-first web developer, it's important for me to study how users interact with the content to answer their questions and reach their goals.This course taught me how to draft concise and user-friendly web content using the 5 E's of Usability: Efficient, Effective, Easy to Use, Engaging, and Error Tolerant.</div>
            <div itemscope itemtype="http://schema.org/EducationalOrganization">
           <div itemprop="name">University of Arkansas at Little Rock</div>
           </div>
         <article itemscope itemtype="https://schema.org/Course">
           <h4 itemprop="name">Usability Testing and Design | Spring 2017</h4>
-          <div itemprop="description">I learned how to conduct a full-scale usability test from start to finish working on the UALR library's website.</div>
+          <div itemprop="description">I learned how to conduct a full-scale usability test from start to finish working with my team on the UALR library's website. Even though this class was taken at the undergraduate level I have continued to build upon the knowledge I gained from conducting a usability study</div>
            <div itemscope itemtype="http://schema.org/EducationalOrganization">
           <div itemprop="name">University of Arkansas at Little Rock</div>
           </div>
