basic tablet view using grid template area

--- a/resume/index.html
+++ b/resume/index.html
@@ -72,7 +72,7 @@
   
         <dd itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
           <span itemprop="streetAddress">715 Sherman St. Apt 13</span>
-          <span itemprop="addressLocality">Little Rock</span>
+          <span itemprop="addressLocality">Little Rock, AR</span>
           <span itemprop="postalCode">72202</span>
           <span itemprop="addressCountry">USA</span>
         </dd>
