--- a/resume/index.html
+++ b/resume/index.html
@@ -20,6 +20,7 @@
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
+  <script src="https://kit.fontawesome.com/fc99a5d90b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -49,7 +50,8 @@
       <p itemprop="description">At UA Little Rock, I'm leveling up my dev skills by focusing on mobile-first design and progressive enhancement. My goal is to join a diverse web team to contribute my content expertise and grow as a developer.
       </p>
       </div>
-      <dl class="details">
+       
+      </dl><dl class="details">
         <dt>Name</dt>
         <dd itemprop="name">
           <span itemprop="givenName">Kristena</span> <span itemprop="familyName">Merritt</span>
@@ -69,7 +71,6 @@
           <a itemprop="email" href="mailto:merrittkristena@gmail.com">merrittkristena@gmail.com</a>
         </dd>
         <dt>Address</dt>
-  
         <dd itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
           <span itemprop="streetAddress">715 Sherman St. Apt 13</span>
           <span itemprop="addressLocality">Little Rock, AR</span>
@@ -78,9 +79,9 @@
         </dd>
       </dl>
       <ul class="related-links">
-        <li><a itemprop="url" rel="me" href="https://github.com/klmerritt44">GitHub</a></li>
-        <li><a itemprop="url" rel="me" href="https://www.linkedin.com/in/kristena-merritt/">Linkedin</a></li>
-        <li><a itemprop="url" href="assets/doc/km-resume-web-content-specialist.pdf" download>PDF Resume</a></li>
+        <li><a itemprop="url" rel="me" href="https://github.com/klmerritt44"><i class="fab fa-github-square"></i> GitHub</a></li>
+        <li><a itemprop="url" rel="me" href="https://www.linkedin.com/in/kristena-merritt/"><i class="fab fa-linkedin-in"></i>Linkedin</a></li>
+        <li><a itemprop="url" href="assets/doc/km-resume-web-content-specialist.pdf" ><i class="far fa-file-pdf"></i>PDF Resume</a></li>
       </ul>
     </section>
     <section id="skills">
@@ -189,7 +190,8 @@
     </div>
   </footer>
   <script src="js/app.js"></script>
-  <script src="https://kit.fontawesome.com/fc99a5d90b.js" crossorigin="anonymous"></script>
+  <!-- <script src="https://kit.fontawesome.com/fc99a5d90b.js" crossorigin="anonymous"></script> -->
+  <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
 </body>
 
