adjusting padding and margins for desktop media query

--- a/resume/index.html
+++ b/resume/index.html
@@ -138,7 +138,7 @@
             <li>empower tutors</li>
             <li>enhance student writing proficiency</li>
             <li>nurture the university writing center community</li>
-
+            <li>facilitate the integration of technology, particularly with tech-averse students</li>
           </ul>
       </article>
     </section>
