favicon and html fixes

--- a/resume/index.html
+++ b/resume/index.html
@@ -15,8 +15,7 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
   <meta property="og:image:alt" content="">
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
+  <link rel="icon" href="assets/includes/favicon.png" sizes="any">
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
@@ -51,7 +50,7 @@
       </p>
       </div>
        
-      </dl><dl class="details">
+      <dl class="details">
         <dt>Name</dt>
         <dd itemprop="name">
           <span itemprop="givenName">Kristena</span> <span itemprop="familyName">Merritt</span>
@@ -173,6 +172,7 @@
            <div itemscope itemtype="http://schema.org/EducationalOrganization">
           <div itemprop="name">University of Arkansas at Little Rock</div>
           </div>
+        </article>
         <article itemscope itemtype="https://schema.org/Course">
           <h4 itemprop="name">Usability Testing and Design | Spring 2017</h4>
           <div itemprop="description">I learned how to conduct a full-scale usability test from start to finish working with my team on the UALR library's website. Even though this class was taken at the undergraduate level I have continued to build upon the knowledge I gained from conducting a usability study</div>
