--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
           <li><a href="css-grid-exercise-1/index.html">CSS Grid Exercise 1</a></li>
           <li><a href="resume/index.html">Resume</a></li>
           <li><a href="assets/img/flexbox-defense-complete.png">Flexbox Defense</a></li>
+            <ul>
+              <li>Site Planning</li>
+              <li><a href="assets/docs/website-planning-worksheet.pdf">Questionaire</a></li>
+            </ul>
+          
         </ul>
       </nav>
     </header>
