--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -7,6 +7,7 @@
   <title></title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
+  <meta name="author" content="">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
