--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -5,19 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="assets/css/style.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
-    <meta property="og:image:alt" content="">
+    <link href="assets/css/style.css" rel="stylesheet">
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="icon.png">
   </head>
   <body>
     <main>
-      <header class=".container-fluid">
+      <header class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -27,13 +22,13 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Landscaping</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#">Products</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -49,7 +44,6 @@
           </div>
         </div>
       </nav>
-      <h1>Hocott's Garden Center</h1>
       <div class="container-fluid py-5">
         <h1 class="text-body-emphasis">Full-width jumbotron</h1>
         <p class="col-lg-8 mx-auto lead">
@@ -58,6 +52,81 @@
         <button type="button" class="btn btn-success">Success</button>
       </div>
       </header>
+      <section class="container-fluid">
+        <h2>Popular Categories</h2>
+        <div class="row">
+          <div class="col">
+            <img src="https://placehold.co/150x200"/>
+            <p>Category Name</p>
+          </div>
+          <div class="col">
+            <img src="https://placehold.co/150x200"/>
+            <p>Category Name</p>
+          </div>
+          <div class="col">
+            <img src="https://placehold.co/150x200"/>
+            <p>Category Name</p>
+          </div>
+          <div class="col">
+            <img src="https://placehold.co/150x200"/>
+            <p>Category Name</p>
+          </div>
+          <div class="col">
+            <img src="https://placehold.co/150x200"/>
+            <p>Category Name</p>
+          </div>
+          <div class="col">
+            <img src="https://placehold.co/150x200"/>
+            <p>Category Name</p>
+          </div>
+        </div>
+        <button type="button" class="btn btn-success">Success</button>
+      </section>
+      <section class="container-fluid">
+        <h2>Garden Guru Blog</h2>
+        <div class="row">
+          <div class="col">
+            <img src="https://placehold.co/375x375">
+          </div>
+          <div class="col">
+            <div class="row">
+              <h3>Container Gardening 101</h3>
+              <a href="#">Read More</a>
+            </div>
+            <div class="row">
+              <h3>Container Gardening 101</h3>
+              <a href="#">Read More</a>
+            </div>
+            <div class="row">
+              <h3>Container Gardening 101</h3>
+              <a href="#">Read More</a>
+            </div>
+            <div class="row">
+              <a href="#">See All</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer class="container-fluid">
+        <div class="row">
+          <div class="col">
+            <img src="assets/img/google-maps-placeholder.png"/>
+          </div>
+          <div class="col">
+            <p>3612 Kavanaugh Blvd Little Rock, AR</p>
+            <p>Monday - Tuesday: Closed <br/> Wednesday - Saturday: 9:00am - 4:00pm <br/> Sunday: Closed</p>
+            <div class="row">
+              <div class="col">Facebook</div>
+              <div class="col">Twitter</div>
+              <div class="col">Instagram</div>
+              <div class="col">Pinterest</div>
+            </div>
+          </div>
+        </div>
+      </footer>
+      
+      
+
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
