--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
           <li><a href="css-grid-exercise-1/index.html">CSS Grid Exercise 1</a></li>
           <li><a href="resume/index.html">Resume</a></li>
           <li><a href="assets/img/flexbox-defense-complete.png">Flexbox Defense</a></li>
+          <li><a href="responsive-img-demo/index.html">Responsive Img Demo Using SRCSET</a></li>
+          <li><a href="audio-video/index.html">HTML5 Video & Audio Demo</a></li>
           <li>Site Planning</li>
               <ul>
               <li><a href="assets/docs/website-planning-worksheet.pdf">Questionaire</a></li>
               <li><a href="https://www.figma.com/file/1ulG0kUU2ObaePD55OBxOb/Hocott's-Website?type=design&node-id=0%3A1&mode=dev&t=RgfZm9k6e1sZUYui-1">Wireframe</a></li>
               <li><a href="bootstrap/index.html">Bootstrap Prototype</a></li>
             </ul>
+            
         </ul>
       </nav>
     </header>
