--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul>
           <li><a href="pre-assessment/index.html">Pre-Assessment</a></li>
           <li><a href="html5-semantics/index.html">Refactored HTML</a></li>
-          <li><a href="grid/index.html">Grid Demo</a></li>
+          <li><a href="grid/index.html">Fluid Grid Demo</a></li>
           <li><a href="css-grid-exercise-1/index.html">CSS Grid Exercise 1</a></li>
           <li><a href="resume/index.html">Resume</a></li>
           <li><a href="assets/img/flexbox-defense-complete.png">Flexbox Defense</a></li>
@@ -27,10 +27,11 @@
           <li>Site Planning</li>
               <ul>
               <li><a href="assets/docs/website-planning-worksheet.pdf">Questionaire</a></li>
-              <li><a href="https://www.figma.com/file/1ulG0kUU2ObaePD55OBxOb/Hocott's-Website?type=design&node-id=0%3A1&mode=dev&t=RgfZm9k6e1sZUYui-1">Wireframe</a></li>
+              <li><a href="assets/img/wireframe-drawing.jpg">High-Level Wireframe Drawing</a></li>
+              <li><a href="https://www.figma.com/file/1ulG0kUU2ObaePD55OBxOb/Hocott's-Website?type=design&node-id=0%3A1&mode=dev&t=RgfZm9k6e1sZUYui-1">Figma Wireframe</a></li>
               <li><a href="bootstrap/index.html">Bootstrap Prototype</a></li>
             </ul>
-            
+          <li><a href="hocotts/index.html">Final Project</a></li>
         </ul>
       </nav>
     </header>
