styling course home page: added bg img and custom css properites for color scheme

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="primary">
       <h1>Kristena Merritt</h1>
-      <p>IFSC 3342 Mobile Web Design</p>
+      <h2>IFSC 3342 Mobile Web Design</h2>
       <nav>
         <ul>
           <li><a href="pre-assessment/index.html">Pre-Assessment</a></li>
@@ -24,7 +24,7 @@
           <li><a href="assets/img/flexbox-defense-complete.png">Flexbox Defense</a></li>
           <li><a href="responsive-img-demo/index.html">Responsive Img Demo Using SRCSET</a></li>
           <li><a href="audio-video/index.html">HTML5 Video & Audio Demo</a></li>
-          <li>Site Planning</li>
+          <li><strong>Site Planning</strong></li>
               <ul>
               <li><a href="assets/docs/website-planning-worksheet.pdf">Questionaire</a></li>
               <li><a href="assets/img/wireframe-drawing.jpg">High-Level Wireframe Drawing</a></li>
@@ -35,5 +35,19 @@
         </ul>
       </nav>
     </header>
+    <content>
+      <section class="container">
+        <h2>Final Project Reflection (Hocott's Garden Center Website)</h2>
+        <p>I decided to create a website for a local gardening store called Hocott's Garden Center.</p>
+        <p><strong>The purpose of the website is to:</strong></p>
+        <ul>
+          <li>increase visibility from online traffic</li>
+          <li>promote landscaping services</li>
+          <li>build a distinct brand identity</li>
+          <li>educate customers</li>
+          <li>facilitate in-store visits</li>
+        </ul>
+      </section>
+  </content>
   </body>
 </html>
