--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link href="assets/css/style.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300|Work+Sans:700,800" rel="stylesheet">
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F49NXKQMNJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F49NXKQMNJ');
+</script>
   <body>
     <header class="primary">
       <h1>Kristena Merritt</h1>
