responsive img scrset demo, course home page bg img test

--- a/responsive-img-demo/index.html
+++ b/responsive-img-demo/index.html
@@ -1,1 +1,5 @@
-<img src="" srcset="">
+<img src="assets/img/buffalo-national-river-400.jpg" srcset="assets/img/buffalo-national-river-3000.jpg 3000w,
+assets/img/buffalo-national-river-2000.jpg 2000vw,
+assets/img/buffalo-national-river-1000.jpg 1000vw,
+assets/img/buffalo-national-river-600.jpg 600vw,
+assets/img/buffalo-national-river-400 400vw" alt="Buffalo River National River steel creek area."/>
