--- a/hocotts/index.html
+++ b/hocotts/index.html
@@ -33,9 +33,12 @@
 </script>
 
 <body>
-
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <h1>Hocott's Garden Center</h1>
+  </header>
+  <section class="shop"></section>
+  <section class="blog"></section>
+  <footer></footer>
   <script src="js/app.js"></script>
 
 </body>
