added final project color scheme, typography, global styles. styled course homepage header image

--- a/hocotts/index.html
+++ b/hocotts/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hocott's Gardening Center</title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <meta name="description" content="Discover the beauty of your outdoor space with our expert landscaping services. From vibrant garden designs to meticulous lawn care, we're here to cultivate your dream garden.">
+  <meta name="author" content="Kristena Merritt">
+  <meta name="robots" content="noindex">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
@@ -38,7 +39,7 @@
       <ul>
         <li><a href="landscaping.html">Landscaping</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Products</a></li>
+        <li><a href="products.html">Products</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="blog.html">Blog</a></li>
       </ul>
