--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <content>
       <section class="container">
         <h2>Final Project Reflection (Hocott's Garden Center Website)</h2>
-        <p>I decided to create a website for a local gardening store called Hocott's Garden Center.</p>
+        <p>I decided to create a website for a local business, Hocott's Garden Center.</p>
         <p><strong>The purpose of the website is to:</strong></p>
         <ul>
           <li>increase visibility from online traffic</li>
