styled course home page header

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </script>
   <body>
     <header class="primary">
+      <div id="header-content">
       <h1>Kristena Merritt</h1>
       <h2>IFSC 3342 Mobile Web Design</h2>
       <nav>
@@ -43,6 +44,7 @@
           <li><a href="hocotts/index.html">Final Project</a></li>
         </ul>
       </nav>
+    </div>
     </header>
     <content>
       <section class="container">
