--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="assets/css/style.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300|Work+Sans:700,800" rel="stylesheet">
+    <link rel="icon" href="assets/includes/favicon.png" sizes="any">
+
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="IFSC 3342 | Kristena Merritt" />
+    <meta property="og:description" content="My collection of work from IFSC 3342 - Mobile Web Design." />
+    <meta property="og:image" content="https://klmerritt44.github.io/mobile-web-3342/assets/includes/responsive-design.jpg"/>
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="IFSC 3342 | Kristena Merritt"/>
+    <meta name="twitter:image" content="https://klmerritt44.github.io/mobile-web-3342/assets/includes/responsive-design.jpg"/>
+    <link rel="image_src" href="https://klmerritt44.github.io/mobile-web-3342/assets/includes/responsive-design.jpg" />
   </head>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-F49NXKQMNJ"></script>
@@ -35,7 +46,7 @@
           <li><a href="responsive-img-demo/index.html">Responsive Img Demo Using SRCSET</a></li>
           <li><a href="audio-video/index.html">HTML5 Video & Audio Demo</a></li>
           <li><strong>Site Planning</strong></li>
-              <ul>
+            <ul>
               <li><a href="assets/docs/website-planning-worksheet.pdf">Questionaire</a></li>
               <li><a href="assets/img/wireframe-drawing.jpg">High-Level Wireframe Drawing</a></li>
               <li><a href="https://www.figma.com/file/1ulG0kUU2ObaePD55OBxOb/Hocott's-Website?type=design&node-id=0%3A1&mode=dev&t=RgfZm9k6e1sZUYui-1">Figma Wireframe</a></li>
