--- a/index.html
+++ b/index.html
@@ -69,6 +69,27 @@
           <li>educate customers</li>
           <li>facilitate in-store visits</li>
         </ul>
+        <h2>3342 Course Reflection</h2>
+        <p>The Information Technology dept is where it's at! I'm so glad I reached out and pursed these web classes for my prof dev. I've grow so much professionally and personally as a web developer.</p>
+        <p>Looking back on this course, I've come along way in understanding mobile-web design and modern development approaches. I found myself wrestling with the process and struggling to get over some internal anxiety at times, but I've learned so much! I can now follow a process--on my own. Albeit I need some practice, but the foundation is there!</p>
+        <h3>Areas for Improvement</h3>
+        <ol>
+          <li>Refine My HTML Boilerplate Template and Workflow</li>
+          <p>You know I enjoy coding HTML and I want my boilerplate to be just so, but I haven't finessed it totally. My goal is to regularly update and customize it as I gain new skills and preferences. I don't like having a lot of code that I don't understand. It adds to the overwhelm, so I'd like to dig into the HTML Boilerplate documentation more to ease my anxiety and better understand the extra files and the css media queries and helper classes.</p>
+          <p>This brings me to my second area of improvement.</p>
+          <li>Embrace the "messy middle" and experiment!</li>
+          <p>It's okay to make mistakes! I'm trying to get more comfortable embracing imperfection in the coding process to facilitate learning. I think this has contributed to me getting hung up and having trouble getting started on my web projects.</p>
+          <p>Note for myself: You're not developing the next SpaceX Competitor website! Chill and have fun with it! It's okay that you're still working through everything. Web.development.is.complex!</p>
+          <li>Master Rapid Prototyping with Bootstrap</li>
+          <p>I struggled with changing my ways of coding to implement bootstrap. I cried lol. I understand the concept of using the bootstrap classes to implement their external stylesheet, but goodness did it get overwhelming with all the documentation. I wish I would have given myself more time to play with it and ask questions in class. I'm kind of afraid to go back and look at it, so I know I need to.😖</p>
+          <li>Cultivate My Developer Mindset and Give Grace to Myself</li>
+          <p>Having a positive mindset is so important in our line of work, and I'm realizing that even more so now. I'm starting to get over the feeling of not belonging, but I still struggle with negative self-talk. I had to figure out if this is where I give up and stop pursing my coding journey. It took some soul searching and pulling inspiration from unlikely places like the Legally Blonde movie (she remained true to herself, made friends, and proved all the nah-sayers wrong as the class valedictorian!). But also being realistic with what I can accomplish in this time. I'm doing great and I will continue my development journey!</p>
+          <p> I'm reframing the way I think about set backs as learning opportunities, and I'm proud of myself for sticking with this class!</p>
+          <li>Deepen Understanding of Mobile-First Approach & Get in More Practice</li>
+          <p>Mobile-first is a lot more challenging but I prefer it because it is more of a "content-first" approach. I like the idea of being forced to prioritize content for the small screen first. This helped reinforce everything I know as an empathetic web professional, that CONTENT IS THE MOST IMPORTANT PART OF THE SITE! It's what people are coming for. Learning about this approached also helped me see exactly where I could currently fit into a web development team as a specialized front-end dev that helps consult the clients, massage content, and focus in on the usability and accessibilty of the content.</p>
+          <p>I also appreciate how the mobile-first approach forces you to deal with the more challenging design decisions up front and allows us to write less CSS. Adopting this approach is helping me stick with a process so I can make it easier on my self later on--something I wasn't great at doing.</p>
+        </ol>
+        <p>I hope to continue these skills this fall through the IT Technical Certification Program. Thanks for the great class!</p>
       </section>
   </content>
   </body>
