fixed html audio video demo

--- a/audio-video/index.html
+++ b/audio-video/index.html
@@ -4,36 +4,29 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>Audio & Video Demo</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
-  <meta name="author" content="">
-
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
-
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
+  <meta name="author" content="Kristena Merritt">
 </head>
 
 <body>
   <h1>HTML5 Native Audio & Video</h1>
   <h2>Audio Example</h2>
   <audio controls="controls">
-    <source src="thunder.ogg" type="audio/ogg" /><!-- Firefox, Opera, Chrome -->
-    <source src="thunder.mp3" type="audio/mp3" /><!-- Safari, Chrome, IE9+ -->
-    <source src="thunder.wav" type="audio/wav" /><!-- Safari, Opera, IE9+, Firefox -->
-    <a href="thunder.mp3">Download the Audio</a>
+    <source src="assets/audio/thunder.ogg" type="audio/ogg" /><!-- Firefox, Opera, Chrome -->
+    <source src="assets/audio/thunder.mp3" type="audio/mp3" /><!-- Safari, Chrome, IE9+ -->
+    <source src="assets/audio/thunder.wav" type="audio/wav" /><!-- Safari, Opera, IE9+, Firefox -->
+    <a href="assets/audio/thunder.mp3">Download the Audio</a>
     </audio>
   
   <h2>Video Example</h2>
   <video poster="assets/img/hudson-shelter-falls-poster.jpg" controls="controls" width="640" height="360">
-    <source width="640" height="360" src="hudson-shelter-falls.mp4" type="video/mp4" />
+    <source width="640" height="360" src="assets/video/hudson-shelter-falls.mp4" type="video/mp4" />
     <source width="640" height="360" src="hudson-shelter-falls.webm" type="video/webm" />
     <source width="640" height="360" src="hudson-shelter-falls.ogv" type="video/ogg" />
   </video>
-  <script src="js/app.js"></script>
+
 </body>
 
 </html>
