added logo with image replacement and testing bg image

--- a/hocotts/index.html
+++ b/hocotts/index.html
@@ -58,32 +58,32 @@
       <a href="#">Get Started</a>
       </div>
     </section>
-    <section class="shop">
-      <h2>Most Popular Categories</h2>
+    <section class="services">
+      <h2>Landscaping Services</h2>
       <div class="grid">
         <article>
           <img src="https://placehold.co/100x200" alt="placeholder"/>
-          <a href="#">Category Label</a>
+          <a href="#">Lawn Care and Maintenance</a>
         </article>
         <article>
           <img src="https://placehold.co/100x200" alt="placeholder"/>
-          <a href="#">Category Label</a>
+          <a href="#">Low-Impact Design</a>
         </article>
         <article>
           <img src="https://placehold.co/100x200" alt="placeholder"/>
-          <a href="#">Category Label</a>
+          <a href="#">Garden Design and Planting</a>
         </article>
         <article>
           <img src="https://placehold.co/100x200" alt="placeholder"/>
-          <a href="#">Category Label</a>
+          <a href="#">Tree/Shrub Care</a>
         </article>
         <article>
           <img src="https://placehold.co/100x200" alt="placeholder"/>
-          <a href="#">Category Label</a>
+          <a href="#">Landscape Design & Consultations</a>
         </article>
         <article>
           <img src="https://placehold.co/100x200" alt="placeholder"/>
-          <a href="#">Category Label</a>
+          <a href="#">Irrigation System Installation</a>
         </article>
       </div>
       <a href="#">Shop all Plants</a>
