styled mobile header

--- a/hocotts/index.html
+++ b/hocotts/index.html
@@ -33,7 +33,7 @@
   gtag('config', 'G-F49NXKQMNJ');
 </script>
 <body>
-  <header id="main-hero" class="primary hero-image">
+  <header class="primary">
   <div class="nav-container">
 
     <h1 class="logo"><a href="index.html">Hocott's Garden Center</a></h1>
@@ -51,13 +51,13 @@
     </div>
   </div>
   </header>
-  <main>
+  <div id="primary-hero">
     <section id="cta">
-      <div class="screen">
       <h2>Build a Raised Garden Bed!</h2>
       <a href="#">Get Started</a>
-      </div>
     </section>
+  </div>
+  <main>
     <section class="services">
       <h2>Landscaping Services</h2>
       <div class="grid">
@@ -86,14 +86,14 @@
           <a href="#">Irrigation System Installation</a>
         </article>
       </div>
-      <a href="#">Shop all Plants</a>
+      <a href="#" class="cta-button">Landscaping</a>
     </section>
     <section id="blog">
       <div class ="container">
         <h2>Garden Guru Blog</h2>
         <div class="grid">
           <img src="assets/img/spider-plant.jpg" 
-          srcset="assets/img/spider-plant-475.jpg 766w,
+          srcset="/assets/img/spider-plant-475.jpg 766w,
          assets/img/spider-plant-700.jpg 3000w"
           alt="hanging spider plant">
           <div class="posts">
