--- a/hocotts/index.html
+++ b/hocotts/index.html
@@ -115,7 +115,7 @@
     </section>
   </main>
   <footer>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13110.832723377938!2d-92.3310699!3d34.7629432!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d2a36550a9f521%3A0x3a45e6fd2f8604d2!2sHocott&#39;s%20Garden%20Center!5e0!3m2!1sen!2sus!4v1714429733509!5m2!1sen!2sus" width="375" height="275" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13110.832723377938!2d-92.3310699!3d34.7629432!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d2a36550a9f521%3A0x3a45e6fd2f8604d2!2sHocott&#39;s%20Garden%20Center!5e0!3m2!1sen!2sus!4v1714429733509!5m2!1sen!2sus" width="75%" height="275" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <address><p>3612 Kavanaugh Blvd Little Rock, AR</p></address>
     <div class="hours">
       <p>Monday-Tuesday: Closed</p>
@@ -125,7 +125,7 @@
     <h6>
       &copy; 2024 Hocott's Garden Center |
       <a href="https://planthardiness.ars.usda.gov/">USDA Plant Hardiness Map</a> |
-      <a href="contact.html">Contact Us</a> |
+      <a href="contact.html">Contact&nbsp;Us</a> |
       <a href="#top">Back to the Top</a>
     </h6>
   </footer>
