set up image desktop media queries

--- a/hocotts/index.html
+++ b/hocotts/index.html
@@ -62,27 +62,27 @@
       <h2>Landscaping Services</h2>
       <div class="grid image-gallery">
         <article>
-          <img src="https://placehold.co/100x150" alt="placeholder"/>
+          <img src="assets/img/lawn-care-100.jpg" srcset="assets/img/lawn-care-200.jpg 1000w" alt=""/>
           <a href="#">Lawn Care</a>
         </article>
         <article>
-          <img src="https://placehold.co/100x150" alt="placeholder"/>
+          <img src="assets/img/low-impact-design-100.jpg" srcset="assets/img/low-impact-design-200.jpg 1000w" alt=""/>
           <a href="#">Low-Impact Design</a>
         </article>
         <article>
-          <img src="https://placehold.co/100x150" alt="placeholder"/>
+          <img src="assets/img/garden-design-100.jpg" srcset="assets/img/garden-design-200.jpg 1000w" alt=""/>
           <a href="#">Garden Design</a>
         </article>
         <article>
-          <img src="https://placehold.co/100x150" alt="placeholder"/>
+          <img src="assets/img/shrub-care-100.jpg" srcset="assets/img/shrub-care-200.jpg 1000w" alt=""/>
           <a href="#">Tree/Shrub Care</a>
         </article>
         <article>
-          <img src="https://placehold.co/100x150" alt="placeholder"/>
+          <img src="assets/img/consultation-100.jpg" srcset="assets/img/consultation-200.jpg 1000w" alt=""/>
           <a href="#">Consultations</a>
         </article>
         <article>
-          <img src="https://placehold.co/100x150" alt="placeholder"/>
+          <img src="assets/img/irrigation-100.jpg" srcset="assets/img/irrigation-200.jpg 1000w" alt=""/>
           <a href="#">Irrigation Installation</a>
         </article>
       </div>
