--- a/hocotts/index.html
+++ b/hocotts/index.html
@@ -62,7 +62,7 @@
       <h2>Landscaping Services</h2>
       <div class="grid image-gallery">
         <article>
-          <img src="assets/img/lawn-care-200.jpg" alt=""/>
+          <img src="assets/img/lawn-care-200.jpg" srcset="assets/img/lawn-care-100jpg 400v" alt=""/>
           <a href="#">Lawn Care</a>
         </article>
         <article>
