styling hero cta mobile and tablet version.

--- a/hocotts/index.html
+++ b/hocotts/index.html
@@ -43,6 +43,7 @@
           <li><a href=""><i class="fa fa-heart site-nav--icon"></i>About</a></li>
           <li><a href=""><i class="fa fa-leaf site-nav--icon"></i>Landscaping</a></li>
           <li><a href=""><i class="fa fa-picture-o site-nav--icon"></i>Gallery</a></li>
+          <li><a href=""><i class="fa fa-pencil site-nav--icon"></i>Blog</a></li>
           <li><a href=""><i class="fa fa-envelope site-nav--icon"></i>Contact</a></li>
         </ul>
     </nav>
