--- a/hocotts/index.html
+++ b/hocotts/index.html
@@ -81,7 +81,7 @@
           <a href="#">Irrigation Installation</a>
         </article>
       </div>
-      <a href="#" class="cta-button">Explore Services</a>
+      <a href="landscaping.html" class="cta-button">Explore Services</a>
     </section>
     <section id="blog">
       <div class ="container">
@@ -138,7 +138,18 @@
   <footer>
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13110.832723377938!2d-92.3310699!3d34.7629432!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d2a36550a9f521%3A0x3a45e6fd2f8604d2!2sHocott&#39;s%20Garden%20Center!5e0!3m2!1sen!2sus!4v1714429733509!5m2!1sen!2sus" width="350" height="275" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div class="store-info">
-      <address><p>3612 Kavanaugh Blvd Little Rock, AR</p></address>
+      <div itemscope itemtype="https://schema.org/LocalBusiness">
+        <h3><span itemprop="name">Hocott's Garden Center</span></h3>
+        <span itemprop="description" class="hidden"> A superb collection of plants and gardening supplies.</span>
+        <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+          <address>
+            <span itemprop="streetAddress">3612 Kavanaugh Blvd</span>
+            <span itemprop="addressLocality"> Little Rock</span>,
+            <span itemprop="addressRegion">AR</span>
+          </address>
+        </div>
+        Phone: <span itemprop="telephone">501-647-6171</span>
+      </div>
       <div class="hours">
         <p>Monday-Tuesday: Closed</p>
         <p>Wednesday-Saturday: 9:00am - 4:00pm</p>
