set up about page and 3 col grid utitlity class

--- a/hocotts/about.html
+++ b/hocotts/about.html
@@ -55,14 +55,35 @@
     <section id="content">
       <div class ="container">
         <h2>Nurturing Your Landscape Since 1939</h2>
+        <img src="assets/img/store-owners.jpg" class="img-right">
         <p>At Hocott's Garden Center, we take pride in treating your lawn as if it were our own. Established in 1939, we've been a cornerstone of the community, dedicated to providing top-notch landscaping services and premium garden supplies with a personal touch.</p>
         <h3>Our Commitment to Excellence</h3>
         <p>With decades of experience under our belt, we specialize in all aspects of landscaping design and maintenance. From conceptualization to execution, our team of skilled landscapers ensures every detail is meticulously attended to. We understand the importance of a well-maintained outdoor space, and we're here to make your vision a reality.</p>
         <h3>Your Local Garden Experts</h3>
         <p>As your local garden center, we offer an extensive selection of plants, flowers, and trees to transform your outdoor oasis. Whether you're a seasoned gardener or just starting out, our knowledgeable staff is here to provide expert advice and assistance every step of the way. Browse through our wide array of garden supplies and seasonal decor, and let your creativity flourish.</p>
-        <h4>Contact Us Today</h4>
-        <p>Located at 3612 Kavanaugh Boulevard, Little Rock, AR 72205, Hocott's Garden Center is your one-stop destination for all your gardening needs. Give us a call at (501) 647-6171 or stop by to explore our offerings and discover how we can help enhance your outdoor space. We look forward to serving you!</p>
+        <p>At Hocott's Garden Center, we understand that not everyone has a green thumb or knows exactly what they want when it comes to planters. That's why we offer a unique service tailored to those seeking vibrant yet practical solutions.</p>
       </div>
+    </section>
+    <section class="container">
+      <h2>Explore our products and services!</h2>
+      <p>Discover Your Green Oasis with Hocott's Garden Center. Whether you're looking to add a touch of greenery to your living room, create a vibrant patio garden, or enhance your outdoor landscape, our custom planters and carefully selected plants are sure to impress.</p>
+      <div class="three-col-grid">
+        <figure>
+          <img src="assets/img/houseplants-for-sale-450.jpg"/>
+        <figcaption>Houseplants</figcaption>
+        </figure>
+        <figure>
+          <img src="assets/img/succulents-450.jpg"/>
+        <figcaption>Succulents</figcaption>
+        </figure>
+        <figure>
+          <img src="assets/img/hydrangeas-450.jpg"/>
+        <figcaption>Outdoor Plants</figcaption>
+        </figure>
+      </div>
+      <p>Visit us today to explore our diverse range of products and services. Let Hocott's Garden Center be your partner in cultivating beauty and tranquility in your home or garden.</p>
+      <h3>Contact Us Today</h3>
+        <p>Located at 3612 Kavanaugh Boulevard, Little Rock, AR 72205, Hocott's Garden Center is your one-stop destination for all your gardening needs. Give us a call at (501) 647-6171 or stop by to explore our offerings and discover how we can help enhance your outdoor space. We look forward to serving you!</p>
     </section>
   </main>
   <footer>
